<resources>
    <string name="app_name">DESNUTRAPP UPN</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="invalid_email">Correo no Válido</string>
    <string name="invalid_password">Contraseña no valida</string>
    <string name="ParentData">Datos Padres</string>
    <string name="FatherNames">Nombres Padre</string>
    <string name="Lastname">Apellido Paterno</string>
    <string name="MotherName">Apellido Materno</string>
    <string name="dni">DNI</string>
    <string name="CellPhone">Celular</string>
    <string name="Address">Dirección</string>
    <string name="MotherNames">Nombres Madre</string>
    <string name="Following">Siguiente</string>
    <string name="is_required">El dato es requerido</string>
    <string name="not_valid">no válido</string>
    <string name="not_valid_dni">DNI no válido</string>
    <string name="enter_valid_data">Ingrese un dato válido</string>
    <string name="Save">Guardar</string>
    <string name="See_graphic">Ver gráfica</string>
    <string name="Feminine">Femenino</string>
    <string name="Male">Masculino</string>
    <string name="Location">Localidad</string>
    <string name="Code">Código</string>
    <string name="BirthDate">Fecha Nacimiento</string>
    <string name="Names">Nombres</string>
    <string name="select_date">Seleccione una fecha</string>
    <string name="select_code">Seleccione una localidad</string>
    <string name="select_gender">Seleccione el género</string>
    <string name="newborn_data">Datos del recién nacido</string>
    <string name="value">valor</string>
    <string name="age">Edad</string>
    <string name="weight">Peso</string>
    <string name="size">Talla</string>
    <string name="date">Fecha Actual</string>
    <string name="ControlDate">Fecha Control</string>
    <string name="Severely_malnourished">Desnutrido severo</string>
    <string name="Malnourished">Desnutrido</string>
    <string name="Overweight">Sobrepeso</string>
    <string name="Obesity">Obesidad</string>
    <string name="Normal">Normal</string>
    <string name="ToDiagnose">Diagnosticar</string>

    <string name="d1">5,4 kg</string>
    <string name="d2"> 5.7 kg</string>
    <string name="d3">De 5.7 Kg a 9.3 Kg</string>
    <string name="d4">> 9.3 kg</string>
    <string name="d5">> 9.8 Kg</string>
    <string name="To_accept">Aceptar</string>

    <string name="Severe_short_stature">Talla baja severa</string>
    <string name="Short_stature">Talla baja</string>
    <string name="Tall_size">Talla alta</string>
    <string name="already_registered">El control para la edad</string>
    <string name="this_age">No hay control para esta edad: </string>
    <string name="already_registered_2">ya fue registrado, próximo control:</string>
    <string name="according_weight">Valores según Peso</string>
    <string name="severe_carving">Talla severa</string>
    <string name="low_cut">Talla Baja</string>
    <string name="tall_size">Talla Alta</string>
    <string name="according_size">Valores según Talla</string>
    <string name="again">Ocurrió un error, intentar de nuevo</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="log_in">Iniciar sesión</string>
    <string name="Entering">Cargando</string>
    <string name="account_deactivated">Cuenta desactivada, ponte en contacto con el administrador</string>
    <string name="profile">Perfil</string>
    <string name="specialty">Especialidad</string>
    <string name="sign_off">Cerrar sesión</string>
    <string name="vaccination_card">Tarjeta de Vacunación</string>
    <string name="description">Descripción</string>
    <string name="docis">Docis</string>
    <string name="dose">Dosis</string>
    <string name="dose_type">Tipo de docis</string>
    <string name="edit_data">Editar datos</string>
    <string name="update">Actualizar</string>
    <string name="failed_register">Ocurrió un error al registrar, intente nuevamente, si el problema persiste contactar con Desnutrapp</string>
    <string name="failed_update">Ocurrió un error al actualizar, intente nuevamente, si el problema persiste contactar con Desnutrapp</string>
    <string name="failed_delete">Ocurrió un error al eliminar, intente nuevamente, si el problema persiste contactar con Desnutrapp</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="motor_area">Área motora</string>
    <string name="what_can">¿Qué puede hacer?</string>
    <string name="how_stimulate">¿Cómo estimularlo?</string>
    <string name="coordination_area">Área coordinación</string>
    <string name="social_area">Área Social</string>
    <string name="language_area">Área Lenguaje</string>
    <string name="STIMULATION">ESTIMULACIÓN DEL DESARROLLO PSICOMOTOR DEL NIÑO DE O A 5 AÑOS</string>

</resources>