<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.family.EditChildrenActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_7sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_bebec" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:gravity="center"
                android:text="@string/edit_data"
                android:textColor="#429ba3"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/textView"
                app:layout_constraintStart_toStartOf="@id/textView"
                app:layout_constraintTop_toBottomOf="@id/textView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_1sdp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_7sdp"
                    app:cardCornerRadius="@dimen/_15sdp"
                    app:cardElevation="@dimen/_15sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_1sdp"
                        android:orientation="vertical"
                        android:padding="@dimen/_10sdp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/nameBb"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="3dp"
                            android:hint="@string/Names">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawablePadding="5dp"
                                android:inputType="textAutoCorrect|textAutoComplete" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/apPpBB"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_marginEnd="1dp"
                                android:layout_marginBottom="3dp"
                                android:layout_toStartOf="@+id/medioid"
                                android:hint="@string/Lastname">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:enabled="false"
                                    android:inputType="textAutoComplete|textAutoCorrect" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/apMpBB"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_marginStart="1dp"
                                android:layout_marginBottom="3dp"
                                android:layout_toEndOf="@+id/medioid"
                                android:hint="@string/MotherName">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:enabled="false"
                                    android:inputType="textAutoCorrect|textAutoComplete" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <TextView
                                android:id="@+id/medioid"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/idCodebb"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="1dp"
                                android:layout_marginBottom="3dp"
                                android:hint="@string/Code">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawablePadding="5dp"
                                    android:inputType="phone" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </RelativeLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/idlocation"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="3dp"
                            android:hint="@string/Location">

                            <AutoCompleteTextView
                                android:id="@+id/localidadif"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="none"
                                tools:ignore="LabelFor" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:text="@string/failed_update"
                    android:textColor="@color/colorRed"
                    android:textSize="@dimen/_10sdp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/_15sdp"
                    android:background="@color/black"
                    android:text="@string/update"
                    android:textAllCaps="true"
                    android:textColor="#fff" />

                <ProgressBar
                    android:id="@+id/progress_circular_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_19ssp"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>